--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 .App {
   text-align: center;
+  /* background-color: rgb(204, 185, 158); */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-  
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -15,7 +12,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
